--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <noscript>You need to enable JavaScript to play this game.</noscript>
-        <header id="message">Welcome to Button Clicker.</header>
+        <header id="message">Welcome to Sushi Clicker.</header>
         <main>
             <h1>Sushi Clicker</h1>
             <p id="counter">0</p><p>Sushi Rolls</p>
