--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header id="message">Welcome to Sushi Clicker.</header>
         <main>
             <h1>Sushi Clicker</h1>
-            <p id="counter">0</p><p>Sushi Rolls</p>
+            <p id="counter">0</p>
             <p>
                 <button id="button" title="Click Button">Click Button</button>
             </p>
