--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#444" />
   <meta name="description" content="Button clicker idle game." />
-  <link rel="stylesheet" href="index.css" />
+  <link href="index.css" />
   <title>Sushi Clicker</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
@@ -44,12 +44,6 @@
       </tbody>
     </table>
   </main>
-  <script>
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    (window.dataLayer = window.dataLayer || []), gtag("js", new Date());
-  </script>
   <script type="module" src="index.js"></script>
 </body>
 
