--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to play this game.</noscript>
+  <img src="Sushi_Clicker.png" width="50px" height="50px">
   <header id="message">Welcome to Sushi Clicker.</header>
   <main>
     <h1>Sushi Clicker</h1>
