--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 
 <body>
   <noscript>You need to enable JavaScript to play this game.</noscript>
-  <img src="Sushi_Clicker.png" width="50px" height="50px">
-  <header id="message">Welcome to Sushi Clicker.</header>
+  <header><img src="Sushi_Clicker.png" width="100px" height="100px"><p id="message">Welcome to Sushi Clicker.</p></header>
   <main>
-    <h1>Sushi Clicker</h1>
+    <h1><b>Sushi Clicker</b></h1>
     <p id="counter">0</p>
     <p>
       <button id="button" title="Click Button">Click Button</button>
