--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <body>
   <noscript>You need to enable JavaScript to play this game.</noscript>
-  <header><img src="Sushi_Clicker.png" width="100px" height="100px"><p id="message">Welcome to Sushi Clicker.</p></header>
+  <header><img src="Sushi_Clicker.png" width="100px" height="100px">
+    <p id="message">Welcome to Sushi Clicker.</p>
+  </header>
   <main>
     <h1><b>Sushi Clicker</b></h1>
     <p id="counter">0</p>
